[tool.poetry]
name = "wp-acf-py"
version = "0.1.0"
description = ""
authors = ["serii <seriiburduja@gmail.com>"]
readme = "README.md"
packages = [{include = "wp_acf_py"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
